# metamorphosis

./: .env.example  .gitignore  LICENSE  README.md  REFACTORING_PROPOSAL.md  REFACTORING_SUMMARY.md  build_docs.sh  config.yaml  mkdocs.yml  pyproject.toml  serve_docs.sh  todo.md
.cursor/rules/: absolute-imports.mdc  baseline-rule.mdc  design-by-contract.mdc  docker-deploy.mdc  documentation.mdc  end-scripts-with-visible.mdc  fastapi-api.mdc  file-header-rule.mdc  llm-stack.mdc  main-modules-directory.mdc  max-column-width-rule.mdc  no-deep-nesting.mdc  python-style.mdc  role-definition.mdc  testing.mdc
agui/: SETUP.md  package.json
agui/public/: word_clouds
agui/scripts/: run-agent.bat  run-agent.sh  setup-agent.sh
docs/: architecture.md  figure-1.html  index.md
docs/examples/: extract_achievements_usage.md  index.md  rationalize_usage.md  review_text_evaluator_usage.md  (+2 more)
project_documents/: project_portfolio.jsonl
prompts/: achievements_extraction_system_prompt.md  copy_editor.md  evaluation_score_system_prompt.md  key_achievements_system_prompt.md  key_achievements_user_prompt.md  summarizer.md  summarizer_system_prompt.md  summarizer_user_prompt.md  text_evaluator_system_prompt.md  text_evaluator_user_prompt.md  text_rationalization_system_prompt.md  text_rationalization_user_prompt.md
qdrant_db/: meta.json
sample_reviews/: copy_edited.md  data_engineer_review.md  evaluation_radar_plot.html  key_achievements.jsonl  poor_review.md  raw_review.md  text_evaluator_results.jsonl
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: test_setup.py
(+111 files in other folders)
