[project]
name = "metamorphosis"
version = "0.1.0"
description = "A simple example with AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.6",
    "langsmith>=0.4.20",
    "spacy>=3.8.7",
    "stylecloud>=0.5.2",
    "svlearn-bootcamp>=0.1.7",
    "uvicorn>=0.35.0",
    "wordcloud>=1.9.4",
    "loguru>=0.7.2",
    "langchain-mcp-adapters>=0.1.9",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "plotly>=5.17.0",
    "icontract>=2.7.1",
    "streamlit-ace>=0.1.1",
    "qdrant-client>=1.15.1",
    "openai>=1.107.0",
    "pillow>=11.3.0",
    "transformers>=4.56.1",
    "torch>=2.8.0",
    "open-clip-torch>=3.1.0",
    "google-adk>=1.17.0",
    "litellm>=1.79.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/metamorphosis"]

[dependency-groups]
dev = [
    "radon>=6.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
